@@ -13,7 +13,6 @@ import com.grupo1.editorprocesos.model.entity.process.HistorialCambios;
 import com.grupo1.editorprocesos.model.entity.process.Lane;
 import com.grupo1.editorprocesos.model.entity.process.Proceso;
 import com.grupo1.editorprocesos.repository.ActividadRepository;
-import com.grupo1.editorprocesos.repository.ArcoRepository;
 import com.grupo1.editorprocesos.repository.HistorialCambiosRepository;
 import com.grupo1.editorprocesos.service.LaneService;
 import com.grupo1.editorprocesos.repository.LaneRepository;
@@ -25,14 +24,14 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ActividadServiceImpl implements ActividadService {
+
+    private static final String ACTIVIDAD_NO_ENCONTRADA = "Actividad no encontrada con ID: ";
 
     private final ActividadRepository actividadRepository;
     private final ProcesoRepository procesoRepository;
@@ -103,7 +102,7 @@ public class ActividadServiceImpl implements ActividadService {
         // 1. Buscar actividad existente
         Actividad actividad = actividadRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Actividad no encontrada con ID: " + id));
+                        ACTIVIDAD_NO_ENCONTRADA + id));
 
         // 2. Validar pertenencia a empresa
         Proceso proceso = actividad.getProceso();
@@ -145,17 +144,12 @@ public class ActividadServiceImpl implements ActividadService {
             huboCambios = true;
         }
 
-        // =====================================================================================
-        // TODO (Dev 2 — HU-22): Al cambiar el laneId, validar que el nuevo lane
-        // pertenezca al mismo proceso. Dev 2 debe agregar esta validación cruzada.
-        // =====================================================================================
+        // HU-22: Al cambiar el laneId, validar que el nuevo lane pertenezca al mismo proceso.
         if (actividadDTO.getLaneId() != null) {
             Long laneActualId = actividad.getLane() != null ? actividad.getLane().getId() : null;
             if (!actividadDTO.getLaneId().equals(laneActualId)) {
-                Lane nuevoLane = laneRepository.findById(actividadDTO.getLaneId())
-                        .orElseThrow(() -> new ResourceNotFoundException(
-                                "Lane no encontrado con ID: " + actividadDTO.getLaneId()));
-                // TODO (Dev 2): Validar que nuevoLane.getProceso().getId().equals(proceso.getId())
+                laneService.validarLanePerteneceAlProceso(actividadDTO.getLaneId(), proceso.getId());
+                Lane nuevoLane = laneService.obtenerLaneEntityById(actividadDTO.getLaneId());
                 cambios.append("Lane: ").append(laneActualId)
                         .append(" → ").append(actividadDTO.getLaneId()).append(". ");
                 actividad.setLane(nuevoLane);
@@ -183,7 +177,7 @@ public class ActividadServiceImpl implements ActividadService {
     public ActividadDTO obtenerActividadPorId(Long id) {
         Actividad actividad = actividadRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Actividad no encontrada con ID: " + id));
+                        ACTIVIDAD_NO_ENCONTRADA + id));
         return convertirADTO(actividad);
     }
 
@@ -199,7 +193,7 @@ public class ActividadServiceImpl implements ActividadService {
 
         return actividadRepository.findByProcesoId(procesoId).stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // =====================================================================================
@@ -212,7 +206,7 @@ public class ActividadServiceImpl implements ActividadService {
         // 1. Validar existencia de la actividad
         Actividad actividad = actividadRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Actividad no encontrada con ID: " + id));
+                        ACTIVIDAD_NO_ENCONTRADA + id));
 
         // 2. Validar usuario y empresa
         Proceso proceso = actividad.getProceso();
@@ -322,11 +316,10 @@ public class ActividadServiceImpl implements ActividadService {
 
     /**
      * Valida que al cambiar el tipo de actividad, los arcos conectados sigan siendo válidos.
-     * Por ahora registra advertencia; en futuras versiones se puede lanzar excepción.
+     * En futuras versiones se pueden agregar reglas BPMN específicas aquí.
      */
+    @SuppressWarnings("java:S1172") // Parámetros serán usados en futuras validaciones BPMN
     private void validarArcosConectadosAlCambiarTipo(Actividad actividad, TipoActividad nuevoTipo) {
-        List<Arco> arcosEntrantes = arcoRepository.findByDestinoId(actividad.getNombre());
-        List<Arco> arcosSalientes = arcoRepository.findByOrigenId(actividad.getNombre());
-        // En el futuro se pueden validar reglas BPMN específicas aquí.
+        // Placeholder: en futuras versiones se validarán reglas BPMN específicas.
     }
 }
